<resources>
    <string name="app_name">SmartWatch 2</string>
    <string name="ga_trackingId">UA-21337977-29</string>
    <string name="ga_sampleFrequency">100.0</string>
    <string name="dbg_factory_reset">[Debug] Factory reset</string>
    <string name="dbg_factory_reset_failed">Factory reset failed</string>
    <string name="dbg_extension_settings">[Debug] Extension settings</string>
    <string name="dbg_send_single_img_1">[Debug] Send single image 1</string>
    <string name="dbg_send_single_img_2">[Debug] Send single image 2</string>
    <string name="dbg_connecting">[Debug] Connecting...</string>
    <string name="dbg_connected">[Debug] Connected to SmartWatch 2!</string>
    <string name="dbg_no_connection">[Debug] No connection!</string>
    <string name="dbg_connected_to_old_fw">[Debug] SmartWatch 2 uses too old firmware!</string>
    <string name="dbg_connected_to_new_fw">[Debug] SmartWatch 2 uses too new firmware!</string>
    <string name="dbg_ask_for_fota">[Debug] Ask for FOTA</string>
    <string name="dbg_redownload_fota">[Debug] Re-download FOTA</string>
    <string name="dbg_redownload_alternative_fota">[Debug] Re-download alternative FOTA</string>
    <string name="dbg_disable_auto_fota">[Debug] Disable automatic FOTA</string>
    <string name="dbg_enable_auto_fota">[Debug] Enable automatic FOTA</string>
    <string name="dbg_toggle_extension_start">[Debug] Start</string>
    <string name="dbg_toggle_extension_stop">[Debug] Stop</string>
    <string name="dbg_show_costanza_log">[Debug] Show Costanza Log</string>
    <string name="dbg_show_WatchFaceEditor">[Debug] Show Watchface Editor</string>
    <string name="dbg_preference_menu_debug_string">Debug</string>
    <string name="dbg_wrong_certificate">"Different certificates of Host App and Smart Connect.
Host App cannot start."</string>
    <string name="dbg_log_name">DebugEvents</string>
    <string name="dbg_share">Share</string>
    <string name="dbg_refresh">Auto-Refresh</string>
    <string name="dbg_dump_filename">File Name</string>
    <string name="dbg_dump_filesize">File Size</string>
    <string name="dbg_remove_dumps">Remove Dumps</string>
    <string name="dbg_send_debug_command">Send Debug Command...</string>
    <string name="dbg_debug_command_adb">"You may also issue commands over tcp.
For a usb-connected phone:
 > adb forward tcp:58616 tcp:58616
 > telnet localhost 58616
"</string>
    <string name="dbg_debug_command_label">Command:</string>
    <string name="dbg_debug_command_hint">Command for Costanza</string>
    <string name="dbg_really_remove_dumps">Delete all stored dump files?</string>
    <string name="dbg_start_apprecommender">Start app recommender extension</string>
    <string name="dbg_force_crash_on_watch">[Debug] Force crash on watch</string>
    <string name="dummy_text_short">Insert string here!</string>
    <string name="dummy_text_long">Insert a much longer string here to test wrapping and other stuff!</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, rebum persius delenit sed id, cu facer veniam sit. No nam falli facete invenire, an duo graeci senserit, zril dolore ex vis. Pro no suas eros intellegat, vim at summo nobis expetenda, quidam dicunt percipit ad mei. Usu ad modus quidam, his inani nominati efficiendi in. Usu suavitate patrioque reprimique ad.

Tota adipisci instructior ne sed, vim at illum melius. Lorem consequat dissentias nam eu, pro ad tempor sapientem gubergren, diam scaevola similique an eam. At laoreet conceptam adversarium sea. Debet inimicus nec te. Eam dolorem dolores ut. Elitr nemore lobortis ius id, dolore cetero."</string>
    <string name="dummy_action_1">Action 1</string>
    <string name="dummy_action_2">Action 2</string>
    <string name="dummy_action_3">Action 3</string>
    <string name="uses_accessory_font">uses-accessory-font</string>
    <string name="permission_notices">"Permission notices for SmartWatch 2 embedded SW

Permission notice for
Miniz

This is free and unencumbered software released into the public domain.

Anyone is free to copy, modify, publish, use, compile, sell, or distribute this software, either in source code form or as a compiled binary, for any purpose, commercial or non-commercial, and by any means.

In jurisdictions that recognize copyright laws, the author or authors of this software dedicate any and all copyright interest in the software to the public domain. We make this dedication for the benefit of the public at large and to the detriment of our heirs and successors. We intend this dedication to be an overt act of relinquishment in perpetuity of all present and future rights to this software under copyright law.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

For more information, please refer to http://unlicense.org


Permission notice for 
PicoJpeg v1.0

Dual license: Public domain and MIT, Rich Geldreich &lt;richgel99@gmail.com>

The MIT License (MIT)

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

Permission notice for 
uPng

Copyright © 2005-2010 Lode Vandevenne
Copyright © 2010 Sean Middleditch

This software is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any damages arising from the use of this software.

Permission is granted to anyone to use this software for any purpose, including commercial applications, and to alter it and redistribute it freely, subject to the following restrictions:

1. The origin of this software must not be misrepresented; you must not claim that you wrote the original software. If you use this software in a product, an acknowledgment in the product documentation would be appreciated but is not required.

2. Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.

3. This notice may not be removed or altered from any source distribution.

Permission notice for 
Android Fonts

Copyright © 2007 The Android Open Source Project.

Licensed under the Apache License, Version 2.0 (the \"License\");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

Permission notice for
FatFs

FatFs module is a generic FAT file system module for small embedded systems. This is a free software that opened for education, research and commercial developments under license policy of following terms.

Copyright © 2013, ChaN, all right reserved.

* The FatFs module is a free software and there is NO WARRANTY.
* No restriction on use. You can use, modify and redistribute it for \"
\"personal, non-profit or commercial products UNDER YOUR RESPONSIBILITY.
* Redistributions of source code must retain the above copyright notice.

Permission notice for 
DragSortListView

A subclass of the Android ListView component that enables drag and drop re-ordering of list items.

Copyright 2012 Carl Bauer

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="featured_extensions_preference_screen">Recommended applications</string>
    <string name="fota_recommendation_marketing_name">SmartWatch 2</string>
    <string name="fota_recommendation_fw_version">Version %1$s</string>
    <string name="fota_recommendation">Update to the latest version of the firmware to get the most out of your SmartWatch 2</string>
    <string name="fota_make_sure">Make sure to:</string>
    <string name="fota_make_sure_content">Connect your SmartWatch 2 to the charger. Keep phone and SmartWatch 2 in range.</string>
    <string name="apprec_extension_category_active">Active</string>
    <string name="apprec_extension_category_communication">Communication</string>
    <string name="apprec_extension_category_music_and_audio">Music &amp; Audio</string>
    <string name="apprec_extension_category_notification">Notifications</string>
    <string name="apprec_extension_category_photography">Photography</string>
    <string name="apprec_extension_category_tools">Tools</string>
    <string name="search_extensions_preference_screen">Search for apps</string>
</resources>