<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/button_factory_reset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbg_factory_reset" />
        <Button android:id="@id/button_resend_fota" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbg_redownload_fota" />
        <Button android:id="@id/button_toggle_auto_fota" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbg_disable_auto_fota" />
        <Button android:id="@id/button_force_crash_on_watch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbg_force_crash_on_watch" />
        <Button android:id="@id/button_debugevents" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dbg_show_costanza_log" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/connectedState" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    </LinearLayout>
</ScrollView>