<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:aha="http://schemas.android.com/apk/res/com.sonymobile.smartconnect.smartwatch2">
    <PreferenceCategory android:key="prelisted_extensions">
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Gmail" android:key="com.sonyericsson.extras.liveware.extension.gmail" aha:icon="@drawable/hostapp_gmail_icn" aha:stars="new" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Facebook" android:key="com.sonyericsson.extras.liveware.extension.facebook" aha:icon="@drawable/hostapp_facebook_icn" aha:stars="new" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Camera" android:key="com.sonymobile.extras.liveware.extension.camera" aha:icon="@drawable/hostapp_camera_icn" aha:stars="new" aha:category="@string/apprec_extension_category_photography" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Weather" android:key="com.sonyericsson.extras.liveware.extension.weather" aha:icon="@drawable/hostapp_weather_icn" aha:stars="new" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Calendar Smart Extension" android:key="com.sonyericsson.extras.liveware.extension.calendar.control" aha:icon="@drawable/hostapp_calendar_icn" aha:stars="new" aha:category="@string/apprec_extension_category_tools" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Music player" android:key="com.sonyericsson.extras.liveware.extension.music" aha:icon="@drawable/hostapp_music_icn" aha:stars="new" aha:category="@string/apprec_extension_category_music_and_audio" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Slideshow" android:key="com.sonyericsson.extras.liveware.extension.slideshow" aha:icon="@drawable/hostapp_slideshow_icn" aha:stars="0" aha:category="@string/apprec_extension_category_tools" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Xperia Lounge (Fifa)" android:key="com.sonyericsson.xhs" aha:icon="@drawable/hostapp_xperia_lounge_icn" aha:stars="new" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Instagram" android:key="com.sonymobile.extras.liveware.extension.instagram" aha:icon="@drawable/hostapp_instagram_icn" aha:stars="new" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Twitter" android:key="com.sonyericsson.extras.liveware.extension.twitter" aha:icon="@drawable/hostapp_twitter_l_icn" aha:stars="2" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Walkmate" android:key="com.sonymobile.androidapp.walkmate" aha:icon="@drawable/hostapp_walkmate_icn" aha:stars="new" aha:category="@string/apprec_extension_category_active" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Runtastic" android:key="com.runtastic.android" aha:icon="@drawable/hostapp_runtastic_icn" aha:stars="new" aha:category="@string/apprec_extension_category_active" aha:company="Runtastic" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Calendar reminder" android:key="com.sonyericsson.extras.liveware.extension.calendar" aha:icon="@drawable/hostapp_calendar_reminder_icn" aha:stars="new" aha:category="@string/apprec_extension_category_notification" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Missed call" android:key="com.sonyericsson.extras.liveware.extension.missedcall" aha:icon="@drawable/hostapp_missed_call_icn" aha:stars="new" aha:category="@string/apprec_extension_category_notification" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Call handling" android:key="com.sonyericsson.extras.liveware.extension.call" aha:icon="@drawable/hostapp_call_icn" aha:stars="5" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Messaging" android:key="com.sonyericsson.extras.liveware.extension.messaging" aha:icon="@drawable/hostapp_messaging_icn" aha:stars="3" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
        <com.sonymobile.smartconnect.hostapp.preferences.IconPreference android:title="Email" android:key="com.sonyericsson.extras.liveware.extension.mail" aha:icon="@drawable/hostapp_email_icn" aha:stars="new" aha:filter="Sony" aha:category="@string/apprec_extension_category_communication" aha:company="SONY Mobile Communications" />
    </PreferenceCategory>
</PreferenceScreen>